--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
     </div>
 
     <footer>
-        <small><i>Copyright &copy; 2021 JavaJam Coffee House
-        <br><a href=
-            "mailto:elizabeth@ng.com" style="color:#76573b">elizabeth@ng.com</a>
-        </i></small>
+        <ul>
+            <li><a><strong>We'd love to hear your feedback !</strong></a></li>
+            <li><a><img src="media\call_icon.png" width="8px" height="8px" alt="call_icon" >
+                Call Us : +65 6123 4567</a></li>
+            <li><a href=
+                "mailto:CLOSETSHOPPER@eee.com" ><img src="media\email_icon.png" width="8px" height="8px" alt="call_icon" > Email Us: CLOSETSHOPPER@eee.com</a></li>
+        </ul> 
+        <p style ="text-align: center; font-size: xx-small; padding-bottom: 5px; margin-top: 5px;" ><i> &copy;Copyright CLOSET SHOPPER  2021 All Rights Reserved</i></p>
     </footer>
 </div>
 </body>
