added new files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <ul>
             <li><a href=".html"><strong>ABOUT US</strong></a></li>
             <li><a href=".html"><strong>SHOP ALL CATEGORIES</strong></a></li>
-            <li><a><img src="media\logo.png" width="195px" height="35px"   alt="logo" style="float:center;" ></a></li>
+        </ul>
+        <a href=".html"><img src="media\logo.png" width="195px" height="35px"   alt="logo" style="float:center;" ></a>
+        <ul>
             <li><a href=".html"><strong>CART</strong></a></li>
             <li><a href=".html"><strong>PROFILE PAGE</strong></a></li>
         </ul>
