changed php extensions

--- a/index.html
+++ b/index.html
@@ -20,41 +20,32 @@
 
     <!-- Centered link -->
     <div class="topnav-centered">
-        <a href=".html"><img src="media\logo.png" width="260px" height="28px" alt="logo" style="float:center;" ></a>
+        <a href="index.html"><img src="media\logo.png" width="260px" height="28px" alt="logo" style="float:center;" ></a>
     </div>
   
     <!-- Left-aligned links (default) -->
-    <div class="topnav-left">
-        <ul>
-            <li><a href=".html"><strong>ABOUT US</strong></a></li>
-              <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn"><strong>SHOP ALL CATEGORIES</strong></a>
-                    <div class="dropdown-content">
-                      <a href="#">Link 1</a>
-                      <a href="#">Link 2</a>
-                      <a href="#">Link 3</a>
-                    </div>
-                  </li>
-        </ul>
-        
-    </div>
+            <a href="about_us.html">ABOUT US</a>
+            <div class="dropdown">
+                <button class="dropbtn">SHOP ALL CATEGORIES</button>
+                <div class="dropdown-content">
+                  <a href="#">TOPS</a>
+                  <a href="#">BOTTOMS</a>
+                  <a href="categories_bag.php">BAGS</a>
+                </div>
+              </div>
 
   
     <!-- Right-aligned links -->
     <div class="topnav-right">
-        <a href=".html"><img src="media\cart_icon.png" width="13px" height="13px" alt="cart_icon" ><strong> CART</strong></a>
-        <a href=".html"><strong>PROFILE PAGE</strong></a>
+        <a href=".html"><img src="media\cart_icon.png" width="13px" height="13px" alt="cart_icon" >CART</a>
+        <a href=".html">PROFILE PAGE</a>
     </div>
   
 </div>
-    <div id="leftcolumn">
 
-</div>
-
-    <div id="rightcolumn">
-        <div class="content">
-            photos and stuff
-        </div>
+    <div class="content">
+        <p>photos and stuff</p>
+    </div>
     </div>
 
     <footer>
