basic template for all pages

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="dropbtn">SHOP ALL CATEGORIES</button>
             <div class="dropdown-content">
             <a href="categories_top.php">TOPS</a>
-            <a href="categories_bag.php">BOTTOMS</a>
+            <a href="categories_bottoms.php">BOTTOMS</a>
             <a href="categories_bag.php">BAGS</a>
             </div>
         <!-- </div> -->
@@ -46,7 +46,7 @@
     </div>
 
     <div class="content">
-        <p>photos and stuff</p>
+        <p>home</p>
     </div>
 
 
