--- a/about_us.html
+++ b/about_us.html
@@ -46,7 +46,11 @@
     </div>
 
     <div class="content">
-        <p>about us</p>
+        <h1><strong>ABOUT US</strong></h1>
+        <h1><img src="media\about_us.jpeg" width="600px" height="360px" alt="about_us" ></h1>
+        <p style="width: 750px;">Founded in 2021, we’re here to build a never-ending closet for you ladies to stay elegant and keep up with the trends, all at your convenience. We use only the finest quality materials and have perfected the one-size-fits-all cuttings to keep your choices easy.
+           <br><br> Open our closet for a fuss-free online shopping, have it in your very own closet within days.
+        </p>
     </div>
 
 
