--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="content" style="padding: 0%;">
-        <div class="slideshow-container"></div>
+        <div class="slideshow-container">
             <div class="mySlides fade">
             <img src="media/slideshow/2.png" style="width:100%">
             </div>
@@ -62,13 +62,24 @@
                 <img src="media/slideshow/4.png" style="width:100%">
             </div>
         </div>
-        <div style="text-align:center">
+        <div style="text-align:center; padding-top: 20px; padding-bottom: 20px;">
             <span class="dot"></span> 
             <span class="dot"></span> 
             <span class="dot"></span>
             <span class="dot"></span> 
         </div>
-            
+        <table class='homepage'>
+            <tr>
+                <td><img src="media/slideshow/top.png"></td>
+                <td><img src="media/slideshow/bag.png"></td>
+                <td><img src="media/slideshow/bottom.png"></td>
+            </tr>
+            <tr>
+                <td>TOPS</td>
+                <td>BOTTOMS</td>
+                <td>BAGS</td>
+            </tr>
+        </table>
     </div>
 
 
