--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <title>The Closet Shopper - Home</title>
+
 <meta charset="utf-8">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto' >
 <link rel="stylesheet" href="cs_stylesheet_slideshow.css">
 <link rel="stylesheet" href="cs_stylesheet.css">
-
 </head>
 <body>
 
@@ -14,7 +14,9 @@
 <div id="wrapper">
     <!-- Announcement banner -->
     <div id="banner">
-        <h9>banner goes here</h9>
+        <div class="myBanner fade">New Collections Arrive every Thursday!</div>
+        <div class="myBanner fade">10% off for CSBank members</div>
+        <div class="myBanner fade">Free Delivery on all orders</div>
     </div>
 
     <!-- Top navigation -->
@@ -82,7 +84,6 @@
         </table>
     </div>
 
-
     <footer>
         <ul>
             <li><a><strong>We'd love to hear your feedback!</strong></a></li>
@@ -94,7 +95,8 @@
         <p style ="text-align: center; font-size: xx-small; padding-bottom: 5px; margin-top: 5px;" ><i> &copy;Copyright CLOSET SHOPPER  2021 All Rights Reserved</i></p>
     </footer>
 </div>
-<script>
+<script type="text/javascript" src="script/javascript/slide_show.js"></script>
+<!--<script>
     var slideIndex = 0;
     showSlides();
     
@@ -114,6 +116,6 @@
       dots[slideIndex-1].className += " active";
       setTimeout(showSlides, 5000); // Change image every 2 seconds
     }
-</script>
+</script>-->
 </body>
 </html>
