--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
         </div>
         <table class='homepage'>
             <tr>
-                <td><img src="media/slideshow/top.png"></td>
-                <td><img src="media/slideshow/bag.png"></td>
-                <td><img src="media/slideshow/bottom.png"></td>
+                <td><a href="categories_top.php"><img src="media/slideshow/top.png"></a></td>
+                <td><a href="categories_bag.php"><img src="media/slideshow/bag.png"></a></td>
+                <td><a href="categories_bottoms.php"><img src="media/slideshow/bottom.png"></a></td>
             </tr>
             <tr>
-                <td>TOPS</td>
-                <td>BOTTOMS</td>
-                <td>BAGS</td>
+                <td><a href="categories_top.php">TOPS</a></td>
+                <td><a href="categories_bottoms.php">BOTTOMS</a></td>
+                <td><a href="categories_bag.php">BAGS</a></td>
             </tr>
         </table>
     </div>
