--- a/about_us.html
+++ b/about_us.html
@@ -46,6 +46,12 @@
     </div>
 
     <div class="content">
+        <ul class="breadcrumb">
+                <li><a href="index.html">Home</a></li>
+                <li>About Us</li>
+                <hr style="margin-top:5px;">
+        </ul>
+
         <h1><strong>ABOUT US</strong></h1>
         <h1><img src="media\about_us.jpeg" width="600px" height="360px" alt="about_us" ></h1>
         <p style="width: 750px;">Founded in 2021, we’re here to build a never-ending closet for you ladies to stay elegant and keep up with the trends, all at your convenience. We use only the finest quality materials and have perfected the one-size-fits-all cuttings to keep your choices easy.
