--- a/payment_acknowledgement.html
+++ b/payment_acknowledgement.html
@@ -46,6 +46,12 @@
     </div>
 
     <div class="content">
+    <ul class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="cart.php">Cart</a></li>
+        <li>payment status</li>
+        <hr style="margin-top:5px;">
+    </ul>
         <p>payyment</p>
     </div>
 
