slide_show_update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 <title>The Closet Shopper - Home</title>
-
 <meta charset="utf-8">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto' >
 <link rel="stylesheet" href="cs_stylesheet_slideshow.css">
@@ -97,6 +96,10 @@
 </div>
 
 <script type="text/javascript" src="script/javascript/slide_show.js"></script>
+<script>
+    showSlides();
+    banner_showSlides();
+</script>
 
 </body>
 </html>
