--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>The Closet Shopper - Home</title>
 <meta charset="utf-8">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto' >
-<link rel="stylesheet" href="cs_stylesheet_slideshow.css">
+<link rel="stylesheet" href="script/css/cs_stylesheet_slideshow.css">
 <link rel="stylesheet" href="cs_stylesheet.css">
 </head>
 <body>
