Final checks and comments

--- a/about_us.html
+++ b/about_us.html
@@ -50,6 +50,7 @@
     </div>
 
     <div class="content">
+        <!-- breadcrumb navigation bar -->
         <ul class="breadcrumb">
                 <li><a href="index.php">Home</a></li>
                 <li>About Us</li>
@@ -75,6 +76,7 @@
         <p style ="text-align: center; font-size: xx-small; padding-bottom: 5px; margin-top: 5px;" ><i> &copy;Copyright CLOSET SHOPPER  2021 All Rights Reserved</i></p>
     </footer>
 </div>
+<!-- Call script for Announcement Banner -->
 <script type="text/javascript" src="script/javascript/slide_show.js"></script>
 <script>banner_showSlides();</script>
 </body>
